--- a/Money/AllFrontView.xaml
+++ b/Money/AllFrontView.xaml
@@ -36,7 +36,7 @@
 				<DataGridTextColumn Header="EndDate" Binding="{Binding EndDate, StringFormat=\{0:dd/MM/yyyy\}}" />
 				<DataGridTextColumn Header="Company" Binding="{Binding CompanyName}" />
 				<DataGridTextColumn Header="Name" Binding="{Binding Name}" />
-				<DataGridTextColumn Header="Profit" Binding="{Binding Profit}" >
+				<DataGridTextColumn Header="Profit" Binding="{Binding ProfitText}" >
 					<DataGridTextColumn.CellStyle>
 						<Style>
 							<Setter Property="TextElement.Foreground" Value="{Binding ProfitFontBrush}"/>
@@ -44,14 +44,14 @@
 					</DataGridTextColumn.CellStyle>
 				</DataGridTextColumn>
 				<DataGridTextColumn Header="Amount hold" Binding="{Binding HoldedAmount}" />
-				<DataGridTextColumn Header="Projected profit" Binding="{Binding Projection}" >
+				<DataGridTextColumn Header="Projected profit" Binding="{Binding ProjectionText}" >
 					<DataGridTextColumn.CellStyle>
 						<Style>
 							<Setter Property="TextElement.Foreground" Value="{Binding ProjectionFontBrush}"/>
 						</Style>
 					</DataGridTextColumn.CellStyle>
 				</DataGridTextColumn>
-                <DataGridTextColumn Header="Current price" Binding="{Binding HoldedPrice}">
+                <DataGridTextColumn Header="Current price" Binding="{Binding HoldedPriceText}">
                     <DataGridTextColumn.CellStyle>
                         <Style>
                             <Setter Property="TextElement.Foreground" Value="{Binding CurrentPriceBrush}"/>
